Prevent subdomain preview on desktop overflowing
Flex children have a `min-width: auto` by default. By overriding
that, they no longer grow when their content grows.

See https://stackoverflow.com/a/38383437.

--- a/frontend/src/components/dashboard/PremiumOnboarding.module.scss
+++ b/frontend/src/components/dashboard/PremiumOnboarding.module.scss
@@ -49,6 +49,7 @@
 
     .content {
       max-width: 100%;
+      min-width: $content-xs;
     }
 
     .description-caption {
